@@ -12,6 +12,9 @@ Release 2.5.0 - UNRELEASED
 	when multiple applications are marked for preemption by 
 	ProportionalCapacityPreemptionPolicy (Sunil G via mayank)
 
+    YARN-2053. Fixed a bug in AMS to not add null NMToken into NMTokens list from
+    previous attempts for work-preserving AM restart. (Wangda Tan via jianhe)
+
   OPTIMIZATIONS
 
   BUG FIXES 
